Исправление проектов под требования задачи